force-app/main/default/objects/Validation_Checklist__c/fields/Contract_Verified__c.field-meta.xml
<CustomField>
    <fullName>Contract_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom field built according to BIZ-49979</description>
    <inlineHelpText>Contract closure checklist completed ?</inlineHelpText>
    <label>Contract Verified</label>
    <type>Checkbox</type>
</CustomField>