force-app/main/default/objects/Validation_Checklist__c/fields/IsACVChangeUpdated__c.field-meta.xml
<CustomField>
    <fullName>IsACVChangeUpdated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is ACV Change updated - BIZ-45142</description>
    <label>ACV Change</label>
    <type>Checkbox</type>
</CustomField>