force-app/main/default/objects/Validation_Checklist__c/fields/IsAgmtFilesChecked__c.field-meta.xml
<CustomField>
    <fullName>IsAgmtFilesChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Review the SOW, MSSA and other attached documents to ensure that they have not been modified - BIZ-45142</description>
    <label>Review the SOW MSSA &amp; other attached doc</label>
    <type>Checkbox</type>
</CustomField>