force-app/main/default/objects/Validation_Checklist__c/fields/IsBillFreqChecked__c.field-meta.xml
<CustomField>
    <fullName>IsBillFreqChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Software Billing Frequency (1st Year) value populated on quote - BIZ-45142</description>
    <label>Software Billing Frequency (1st Year)</label>
    <type>Checkbox</type>
</CustomField>