force-app/main/default/objects/Validation_Checklist__c/fields/IsBillingAcctChecked__c.field-meta.xml
<CustomField>
    <fullName>IsBillingAcctChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Billing Account aligns with the Bill To on the OSA - BIZ-45142</description>
    <inlineHelpText>Billing Account aligns with the Bill To on the OSA</inlineHelpText>
    <label>Billing Account</label>
    <type>Checkbox</type>
</CustomField>