force-app/main/default/objects/Validation_Checklist__c/fields/IsCancelFeeChecked__c.field-meta.xml
<CustomField>
    <fullName>IsCancelFeeChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cancellation Fee check - BIZ-45142</description>
    <inlineHelpText>Cancellation fee from non-standard cancellation language</inlineHelpText>
    <label>Cancellation Fee</label>
    <type>Checkbox</type>
</CustomField>