force-app/main/default/objects/Validation_Checklist__c/fields/IsCorrectVersion__c.field-meta.xml
<CustomField>
    <fullName>IsCorrectVersion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Correct Version is signed? - BIZ-45142</description>
    <label>Correct Version is signed</label>
    <type>Checkbox</type>
</CustomField>