force-app/main/default/objects/Validation_Checklist__c/fields/IsFuturePriceCommitChecked__c.field-meta.xml
<CustomField>
    <fullName>IsFuturePriceCommitChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Future Lawyer/ FE Uplift Commitments - Created for BIZ-45142</description>
    <inlineHelpText>Aka Future Pricing Commitment</inlineHelpText>
    <label>Future Lawyer/ FE Uplift Commitments</label>
    <type>Checkbox</type>
</CustomField>