force-app/main/default/objects/Validation_Checklist__c/fields/IsInitTermChecked__c.field-meta.xml
<CustomField>
    <fullName>IsInitTermChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Initial Software Term Length (Months) - BIZ-45142</description>
    <inlineHelpText>Length of the OSA</inlineHelpText>
    <label>Initial Software Term Length (Months)</label>
    <type>Checkbox</type>
</CustomField>