force-app/main/default/objects/Validation_Checklist__c/fields/IsNoComment__c.field-meta.xml
<CustomField>
    <fullName>IsNoComment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No handwritten comments/language has been added by the seller/ customer - BIZ-45142</description>
    <inlineHelpText>No handwritten comments/language has been added by the seller/ customer (the exception is the signature and contact info on the cover page)</inlineHelpText>
    <label>No handwritten comments/language</label>
    <type>Checkbox</type>
</CustomField>