force-app/main/default/objects/Validation_Checklist__c/fields/IsNoEffectDateChange__c.field-meta.xml
<CustomField>
    <fullName>IsNoEffectDateChange__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No changes to the Effective Date - BIZ-45142</description>
    <label>No changes to the Effective Date</label>
    <type>Checkbox</type>
</CustomField>