force-app/main/default/objects/Validation_Checklist__c/fields/IsNoLineChange__c.field-meta.xml
<CustomField>
    <fullName>IsNoLineChange__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No changes to the product lines and pricing - BIZ-45142</description>
    <label>No changes to the product lines&amp;pricing</label>
    <type>Checkbox</type>
</CustomField>