force-app/main/default/objects/Validation_Checklist__c/fields/IsNonCancelMDQ__c.field-meta.xml
<CustomField>
    <fullName>IsNonCancelMDQ__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Non-cancelable Multi-Year Agreements - BIZ-45142</description>
    <label>Non-cancelable Multi-Year Agreements</label>
    <type>Checkbox</type>
</CustomField>