force-app/main/default/objects/Validation_Checklist__c/fields/IsOSAEffectDateChecked__c.field-meta.xml
<CustomField>
    <fullName>IsOSAEffectDateChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Effective Date from OSA populated? - BIZ-45142</description>
    <inlineHelpText>Effective Date from OSA</inlineHelpText>
    <label>Effective Date</label>
    <type>Checkbox</type>
</CustomField>