force-app/main/default/objects/Validation_Checklist__c/fields/IsOSAPageMatch__c.field-meta.xml
<CustomField>
    <fullName>IsOSAPageMatch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The signed OSA has the same number of pages as the approved OSA - BIZ-45142</description>
    <inlineHelpText>The signed OSA has the same number of pages as the approved OSA</inlineHelpText>
    <label>Signed OSA pages match with approved OSA</label>
    <type>Checkbox</type>
</CustomField>