force-app/main/default/objects/Validation_Checklist__c/fields/IsOSATypeChecked__c.field-meta.xml
<CustomField>
    <fullName>IsOSATypeChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is OSA Type Checked? - BIZ-45142</description>
    <inlineHelpText>Master Contract: OSA with a Master Agreement 
        Addendum or Revision: Add-On, Uplift, Contract Replacement, Services Only deal
        Services Change Order: Change Orders</inlineHelpText>
    <label>OSA Type</label>
    <type>Checkbox</type>
</CustomField>