force-app/main/default/objects/Validation_Checklist__c/fields/IsQLIChecked__c.field-meta.xml
<CustomField>
    <fullName>IsQLIChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is QLI checked? - BIZ-45142</description>
    <inlineHelpText>Quantity, Pricing, Products</inlineHelpText>
    <label>Quote Line Items</label>
    <type>Checkbox</type>
</CustomField>