force-app/main/default/objects/Validation_Checklist__c/fields/IsRORChecked__c.field-meta.xml
<CustomField>
    <fullName>IsRORChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>conditionally visible if ROR field has value other than ‘None’ - BIZ-45142</description>
    <inlineHelpText>ROR without Success Criteria
        ROR with Success Criteria
        Terminate MultiYear for Convenience w/Fee</inlineHelpText>
    <label>ROR</label>
    <type>Checkbox</type>
</CustomField>