force-app/main/default/objects/Validation_Checklist__c/fields/IsServiceTotChecked__c.field-meta.xml
<CustomField>
    <fullName>IsServiceTotChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Services Net Total check - BIZ-45142</description>
    <label>Services Net Total</label>
    <type>Checkbox</type>
</CustomField>