force-app/main/default/objects/Validation_Checklist__c/fields/IsSignednDated__c.field-meta.xml
<CustomField>
    <fullName>IsSignednDated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Signature block has been completed with the Authorized Signature, Name and Signature Date - BIZ-45142</description>
    <inlineHelpText>Signature block has been completed with the Authorized Signature, Name and Signature Date</inlineHelpText>
    <label>Signature block has been completed</label>
    <type>Checkbox</type>
</CustomField>