force-app/main/default/objects/Validation_Checklist__c/fields/IsSoftPayTermChecked__c.field-meta.xml
<CustomField>
    <fullName>IsSoftPayTermChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Payment Terms: Software - BIZ-45142</description>
    <label>Payment Terms: Software</label>
    <type>Checkbox</type>
</CustomField>