force-app/main/default/objects/Validation_Checklist__c/fields/IsSubsFeeChecked__c.field-meta.xml
<CustomField>
    <fullName>IsSubsFeeChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Total Subscription Fees checked - BIZ-45142</description>
    <label>Total Subscription Fees</label>
    <type>Checkbox</type>
</CustomField>