force-app/main/default/objects/Validation_Checklist__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related quote record for which checklist will be validated - BIZ-45142</description>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Validation Checklists</relationshipLabel>
    <relationshipName>Validation_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>