force-app/main/default/objects/Validation_Checklist__c/fields/Static_Bundle_Id__c.field-meta.xml
<CustomField>
    <fullName>Static_Bundle_Id__c</fullName>
    <label>Static Bundle Id</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>